Fix threadlist/draftlist checkbox horizontal spacing

--- a/Libadwaita/styles/threadlist.less
+++ b/Libadwaita/styles/threadlist.less
@@ -120,10 +120,9 @@
 // Thread list (single pane view)
 //------------------------------------------------------------
 .list-tabular .list-tabular-item {
-	&:first-child {
-		padding-left: 12px;
+	.list-column.list-column-Check {
+		margin-right: 12px;
 	}
-
 	.checkmark {
 		padding: 8px 11px;
 		
